--- a/index.html
+++ b/index.html
@@ -4,52 +4,66 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/css/styles.css" />
     <title>goit-markup-hw-02</title>
   </head>
   <body>
     <header>
-      <div>
-        <a href="index.html">Web Studio</a>
+      <div class="header-main">
+        <a href="index.html" class="header-logo"
+          ><span class="header-web">Web</span> Studio</a
+        >
         <nav>
-          <a href="#">Студия</a>
-          <a href="portfolio.html">Портфолио</a>
-          <a href="#">Контакты</a>
+          <a href="#" class="header-btn">Студия</a>
+          <a href="portfolio.html" class="header-btn">Портфолио</a>
+          <a href="#" class="header-btn">Контакты</a>
         </nav>
       </div>
-      <div>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+380961111111</a>
+      <div class="header-contacts">
+        <a href="mailto:info@devstudio.com" class="header-contact"
+          >info@devstudio.com</a
+        >
+        <a href="tel:+380961111111" class="header-contact">+380961111111</a>
       </div>
     </header>
     <main>
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+      <section class="section-one">
+        <h1>
+          Эффективные решения<br />
+          для вашего бизнеса
+        </h1>
+        <button type="button" class="section-button">Заказать услугу</button>
       </section>
-      <section>
+      <section class="section-two">
         <ul>
-          <li>
+          <li class="list-item">
             <h3>Внимание к деталям</h3>
             <p>
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
-          <li>
+          <li class="list-item">
             <h3>Пунктуальность</h3>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
-          <li>
+          <li class="list-item">
             <h3>Планирование</h3>
             <p>
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
-          <li>
+          <li class="list-item">
             <h3>Современные технологии</h3>
             <p>
               Значимость этих проблем настолько очевидна, что реализация
@@ -57,29 +71,31 @@
             </p>
           </li>
         </ul>
-        <h2>Чем мы занимаемся</h2>
-        <img
-          src="images/img1.jpg"
-          alt="keyboard typing"
-          width="370"
-          height="294"
-        />
-        <img
-          src="images/img2.jpg"
-          alt="phone staring"
-          width="370"
-          height="294"
-        />
-        <img
-          src="images/img3.jpg"
-          alt="tablet staring"
-          width="370"
-          height="294"
-        />
+        <h2 class="section-two-heading">Чем мы занимаемся</h2>
+        <div class="section-two-images">
+          <img
+            src="images/img1.jpg"
+            alt="keyboard typing"
+            width="370"
+            height="294"
+          />
+          <img
+            src="images/img2.jpg"
+            alt="phone staring"
+            width="370"
+            height="294"
+          />
+          <img
+            src="images/img3.jpg"
+            alt="tablet staring"
+            width="370"
+            height="294"
+          />
+        </div>
       </section>
-      <section>
-        <h2>Наша команда</h2>
-        <div>
+      <section class="section-three">
+        <h2 class="section-three-heading">Наша команда</h2>
+        <div class="section-three-container">
           <figure>
             <img
               src="images/team1.jpg"
@@ -87,7 +103,7 @@
               width="270"
               height="260"
             />
-            <figcaption>
+            <figcaption class="section-three-fig">
               <h4>Игорь Демьяненко</h4>
               <p>Product Designer</p>
             </figcaption>
@@ -99,7 +115,7 @@
               width="270"
               height="260"
             />
-            <figcaption>
+            <figcaption class="section-three-fig">
               <h4>Ольга Репина</h4>
               <p>Frontend Developer</p>
             </figcaption>
@@ -111,7 +127,7 @@
               width="270"
               height="260"
             />
-            <figcaption>
+            <figcaption class="section-three-fig">
               <h4>Николай Тарасов</h4>
               <p>Marketing</p>
             </figcaption>
@@ -123,7 +139,7 @@
               width="270"
               height="260"
             />
-            <figcaption>
+            <figcaption class="section-three-fig">
               <h4>Михаил Ермаков</h4>
               <p>UI Designer</p>
             </figcaption>
@@ -132,10 +148,16 @@
       </section>
     </main>
     <footer>
-      <a href="index.html">Web Studio</a>
-      <p>г. Киев, пр-т Леси Украинки, 26</p>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+380961111111</a>
+      <div class="footer-container">
+        <a href="index.html" class="footer-logo"
+          ><span class="header-web">Web</span> Studio</a
+        >
+        <p class="footer-adress">г. Киев, пр-т Леси Украинки, 26</p>
+        <a href="mailto:info@devstudio.com" class="footer-contact"
+          >info@devstudio.com</a
+        >
+        <a href="tel:+380961111111" class="footer-contact">+380961111111</a>
+      </div>
     </footer>
   </body>
 </html>
