--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           ><span class="header-web">Web</span> Studio</a
         >
         <nav>
-          <a href="#" class="header-btn">Студия</a>
+          <a href="index.html" class="header-btn">Студия</a>
           <a href="portfolio.html" class="header-btn">Портфолио</a>
           <a href="#" class="header-btn">Контакты</a>
         </nav>
