--- a/portfolio.html
+++ b/portfolio.html
@@ -10,8 +10,113 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Portfolio</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="header-main">
+        <a href="index.html" class="header-logo"
+          ><span class="header-web">Web</span> Studio</a
+        >
+        <nav>
+          <a href="index.html" class="header-btn">Студия</a>
+          <a href="portfolio.html" class="header-btn">Портфолио</a>
+          <a href="#" class="header-btn">Контакты</a>
+        </nav>
+      </div>
+      <div class="header-contacts">
+        <a href="mailto:info@devstudio.com" class="header-contact"
+          >info@devstudio.com</a
+        >
+        <a href="tel:+380961111111" class="header-contact">+380961111111</a>
+      </div>
+    </header>
+    <main>
+      <div class="main-filter-buttons">
+        <button type="button" class="main-button">Все</button>
+        <button type="button" class="main-button">Веб-сайты</button>
+        <button type="button" class="main-button">Приложения</button>
+        <button type="button" class="main-button">Дизайн</button>
+        <button type="button" class="main-button">Маркетинг</button>
+      </div>
+      <section class="main-items">
+        <figure class="item">
+          <img src="images/portfolio1.jpg" alt="laptop" />
+          <figcaption class="item-description">
+            <h4>Технокряк</h3>
+            <p>Веб-сайт</p>
+          </figcaption>
+        </figure>
+        <figure class="item">
+          <img src="images/portfolio2.jpg" alt="basketball" />
+          <figcaption class="item-description">
+            <h4>Постер New Orlean vs Golden Star</h3>
+            <p>Дизайн</p>
+          </figcaption>
+        </figure>
+        <figure class="item">
+          <img src="images/portfolio3.jpg" alt="seafood restaurant" />
+          <figcaption class="item-description">
+            <h4>Ресторан Seafood</h3>
+            <p>Приложение</p>
+          </figcaption>
+        </figure>
+        <figure class="item">
+          <img src="images/portfolio4.jpg" alt="headphones" />
+          <figcaption class="item-description">
+            <h4>Проект Prime</h3>
+            <p>Маркетинг</p>
+          </figcaption>
+        </figure>
+        <figure class="item">
+          <img src="images/portfolio5.jpg" alt="boxes" />
+          <figcaption class="item-description">
+            <h4>Проект Boxes</h3>
+            <p>Приложение</p>
+          </figcaption>
+        </figure>
+        <figure class="item">
+          <img src="images/portfolio6.jpg" alt="imac" />
+          <figcaption>
+            <h4>Inspiration has no Borders</h3>
+            <p>Веб-сайт</p>
+          </figcaption>
+        </figure>
+        <figure class="item">
+          <img src="images/portfolio7.jpg" alt="Book" />
+          <figcaption class="item-description">
+            <h4>Издание Limited Edition</h3>
+            <p>Дизайн</p>
+          </figcaption>
+        </figure>
+        <figure class="item">
+          <img src="images/portfolio8.jpg" alt="LAB PROJECT" />
+          <figcaption class="item-description">
+            <h4>Проект LAB</h3>
+            <p>Маркетинг</p>
+          </figcaption>
+        </figure>
+        <figure class="item">
+          <img src="images/portfolio9.jpg" alt="another laptop" />
+          <figcaption class="item-description">
+            <h4>Growing Business</h3>
+            <p>Приложение</p>
+          </figcaption>
+        </figure>
+      </section>
+    </main>
+    <footer>
+      <div class="footer-container">
+        <a href="index.html" class="footer-logo"
+          ><span class="header-web">Web</span> Studio</a
+        >
+        <p class="footer-adress">г. Киев, пр-т Леси Украинки, 26</p>
+        <a href="mailto:info@devstudio.com" class="footer-contact"
+          >info@devstudio.com</a
+        >
+        <a href="tel:+380961111111" class="footer-contact">+380961111111</a>
+      </div>
+    </footer>
+  </body>
 </html>
