--- a/portfolio.html
+++ b/portfolio.html
@@ -33,13 +33,13 @@
       </div>
     </header>
     <main>
-      <div class="main-filter-buttons">
+      <section class="main-filter-buttons">
         <button type="button" class="main-button">Все</button>
         <button type="button" class="main-button">Веб-сайты</button>
         <button type="button" class="main-button">Приложения</button>
         <button type="button" class="main-button">Дизайн</button>
         <button type="button" class="main-button">Маркетинг</button>
-      </div>
+      </section>
       <section class="main-items">
         <figure class="item">
           <img src="images/portfolio1.jpg" alt="laptop" />
