--- a/portfolio.html
+++ b/portfolio.html
@@ -34,76 +34,65 @@
     </header>
     <main>
       <section class="main-filter-buttons">
-        <button type="button" class="main-button">Все</button>
-        <button type="button" class="main-button">Веб-сайты</button>
-        <button type="button" class="main-button">Приложения</button>
-        <button type="button" class="main-button">Дизайн</button>
-        <button type="button" class="main-button">Маркетинг</button>
+        <ul>
+        <li><button type="button" class="main-button">Все</button></li>
+        <li><button type="button" class="main-button">Веб-сайты</button></li>
+        <li><button type="button" class="main-button">Приложения</button></li>
+        <li><button type="button" class="main-button">Дизайн</button></li>
+        <li><button type="button" class="main-button">Маркетинг</button></li>
+    </ul>
       </section>
       <section class="main-items">
-        <figure class="item">
+        <ul>
+        <li class="item">
           <img src="images/portfolio1.jpg" alt="laptop" />
-          <figcaption class="item-description">
-            <h4>Технокряк</h3>
+            <h3>Технокряк</h3>
             <p>Веб-сайт</p>
-          </figcaption>
-        </figure>
-        <figure class="item">
+        </li>
+        <li class="item">
           <img src="images/portfolio2.jpg" alt="basketball" />
           <figcaption class="item-description">
-            <h4>Постер New Orlean vs Golden Star</h3>
+            <h3>Постер New Orlean vs Golden Star</h3>
             <p>Дизайн</p>
-          </figcaption>
-        </figure>
-        <figure class="item">
+        </li>
+        <li class="item">
           <img src="images/portfolio3.jpg" alt="seafood restaurant" />
-          <figcaption class="item-description">
-            <h4>Ресторан Seafood</h3>
+            <h3>Ресторан Seafood</h3>
             <p>Приложение</p>
-          </figcaption>
-        </figure>
-        <figure class="item">
+        </li>
+        <li class="item">
           <img src="images/portfolio4.jpg" alt="headphones" />
-          <figcaption class="item-description">
-            <h4>Проект Prime</h3>
+            <h3>Проект Prime</h3>
             <p>Маркетинг</p>
-          </figcaption>
-        </figure>
-        <figure class="item">
+        </li>
+        <li class="item">
           <img src="images/portfolio5.jpg" alt="boxes" />
-          <figcaption class="item-description">
-            <h4>Проект Boxes</h3>
+            <h3>Проект Boxes</h3>
             <p>Приложение</p>
-          </figcaption>
-        </figure>
-        <figure class="item">
+        </li>
+        <li class="item">
           <img src="images/portfolio6.jpg" alt="imac" />
           <figcaption>
-            <h4>Inspiration has no Borders</h3>
+            <h3>Inspiration has no Borders</h3>
             <p>Веб-сайт</p>
-          </figcaption>
-        </figure>
-        <figure class="item">
+        </li>
+        <li class="item">
           <img src="images/portfolio7.jpg" alt="Book" />
-          <figcaption class="item-description">
-            <h4>Издание Limited Edition</h3>
+            <h3>Издание Limited Edition</h3>
             <p>Дизайн</p>
-          </figcaption>
-        </figure>
-        <figure class="item">
+        </li>
+        <li class="item">
           <img src="images/portfolio8.jpg" alt="LAB PROJECT" />
-          <figcaption class="item-description">
-            <h4>Проект LAB</h3>
+            <h3>Проект LAB</h3>
             <p>Маркетинг</p>
-          </figcaption>
-        </figure>
-        <figure class="item">
+        </li>
+        <li class="item">
           <img src="images/portfolio9.jpg" alt="another laptop" />
-          <figcaption class="item-description">
-            <h4>Growing Business</h3>
+
+            <h3>Growing Business</h3>
             <p>Приложение</p>
-          </figcaption>
-        </figure>
+        </li>
+    </ul>
       </section>
     </main>
     <footer>
@@ -111,11 +100,21 @@
         <a href="index.html" class="footer-logo"
           ><span class="header-web">Web</span> Studio</a
         >
-        <p class="footer-adress">г. Киев, пр-т Леси Украинки, 26</p>
-        <a href="mailto:info@devstudio.com" class="footer-contact"
-          >info@devstudio.com</a
-        >
-        <a href="tel:+380961111111" class="footer-contact">+380961111111</a>
+        <address>
+            <p class="footer-adress">г. Киев, пр-т Леси Украинки, 26</p>
+            <ul>
+              <li>
+                <a href="mailto:info@devstudio.com" class="footer-contact"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a href="tel:+380961111111" class="footer-contact"
+                  >+380961111111</a
+                >
+              </li>
+            </ul>
+          </address>
       </div>
     </footer>
   </body>
