--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -14,23 +14,25 @@
     <title>goit-markup-hw-02</title>
   </head>
   <body>
-    <header>
-      <div class="header-main">
-        <a href="index.html" class="header-logo"
-          ><span class="header-web">Web</span> Studio</a
-        >
-        <nav>
-          <a href="index.html" class="header-btn">Студия</a>
-          <a href="portfolio.html" class="header-btn">Портфолио</a>
-          <a href="#" class="header-btn">Контакты</a>
-        </nav>
-      </div>
-      <div class="header-contacts">
-        <a href="mailto:info@devstudio.com" class="header-contact"
-          >info@devstudio.com</a
-        >
-        <a href="tel:+380961111111" class="header-contact">+380961111111</a>
-      </div>
+    <header class="header">
+      <a href="index.html" class="header-logo"
+        ><span class="header-web">Web</span> Studio</a
+      >
+      <nav class="header-nav">
+        <a href="index.html" class="header-btn">Студия</a>
+        <a href="portfolio.html" class="header-btn">Портфолио</a>
+        <a href="#" class="header-btn">Контакты</a>
+      </nav>
+      <ul class="header-contacts">
+        <li class="header-contact-item">
+          <a href="mailto:info@devstudio.com" class="header-contact"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a href="tel:+380961111111" class="header-contact">+380961111111</a>
+        </li>
+      </ul>
     </header>
     <main>
       <section class="section-one">
@@ -41,7 +43,8 @@
         <button type="button" class="section-button">Заказать услугу</button>
       </section>
       <section class="section-two">
-        <ul>
+        <h2></h2>
+        <ul class="section-two-list">
           <li class="list-item">
             <h3>Внимание к деталям</h3>
             <p>
@@ -71,80 +74,80 @@
             </p>
           </li>
         </ul>
-        <h2 class="section-two-heading">Чем мы занимаемся</h2>
-        <div class="section-two-images">
-          <img
-            src="images/img1.jpg"
-            alt="keyboard typing"
-            width="370"
-            height="294"
-          />
-          <img
-            src="images/img2.jpg"
-            alt="phone staring"
-            width="370"
-            height="294"
-          />
-          <img
-            src="images/img3.jpg"
-            alt="tablet staring"
-            width="370"
-            height="294"
-          />
-        </div>
+        <section>
+          <h2 class="section-two-heading">Чем мы занимаемся</h2>
+          <ul class="section-two-images">
+            <li>
+              <img
+                src="images/img1.jpg"
+                alt="keyboard typing"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li>
+              <img
+                src="images/img2.jpg"
+                alt="phone staring"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li>
+              <img
+                src="images/img3.jpg"
+                alt="tablet staring"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
+        </section>
       </section>
       <section class="section-three">
         <h2 class="section-three-heading">Наша команда</h2>
-        <div class="section-three-container">
-          <figure>
+        <ul class="section-three-container">
+          <li class="section-three-item">
             <img
               src="images/team1.jpg"
               alt="Игорь Демьяненко"
               width="270"
               height="260"
             />
-            <figcaption class="section-three-fig">
-              <h4>Игорь Демьяненко</h4>
-              <p>Product Designer</p>
-            </figcaption>
-          </figure>
-          <figure>
+            <h3>Игорь Демьяненко</h3>
+            <p lang="en">Product Designer</p>
+          </li>
+          <li class="section-three-item">
             <img
               src="images/team2.jpg"
               alt="Ольга Репина"
               width="270"
               height="260"
             />
-            <figcaption class="section-three-fig">
-              <h4>Ольга Репина</h4>
-              <p>Frontend Developer</p>
-            </figcaption>
-          </figure>
-          <figure>
+            <h3>Ольга Репина</h3>
+            <p lang="en">Frontend Developer</p>
+          </li>
+          <li class="section-three-item">
             <img
               src="images/team3.jpg"
               alt="Николай Тарасов"
               width="270"
               height="260"
             />
-            <figcaption class="section-three-fig">
-              <h4>Николай Тарасов</h4>
-              <p>Marketing</p>
-            </figcaption>
-          </figure>
-          <figure>
+            <h3>Николай Тарасов</h3>
+            <p lang="en">Marketing</p>
+          </li>
+          <li class="section-three-item">
             <img
               src="images/team4.jpg"
               alt="Михаил Ермаков"
               width="270"
               height="260"
             />
-            <figcaption class="section-three-fig">
-              <h4>Михаил Ермаков</h4>
-              <p>UI Designer</p>
-            </figcaption>
-          </figure>
-        </div>
+            <h3>Михаил Ермаков</h3>
+            <p lang="en">UI Designer</p>
+          </li>
+        </ul>
       </section>
     </main>
     <footer>
@@ -152,11 +155,21 @@
         <a href="index.html" class="footer-logo"
           ><span class="header-web">Web</span> Studio</a
         >
-        <p class="footer-adress">г. Киев, пр-т Леси Украинки, 26</p>
-        <a href="mailto:info@devstudio.com" class="footer-contact"
-          >info@devstudio.com</a
-        >
-        <a href="tel:+380961111111" class="footer-contact">+380961111111</a>
+        <address class="footer-address">
+          <p class="footer-street">г. Киев, пр-т Леси Украинки, 26</p>
+          <ul>
+            <li class="footer-list-item">
+              <a href="mailto:info@devstudio.com" class="footer-contact"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+380961111111" class="footer-contact"
+                >+380961111111</a
+              >
+            </li>
+          </ul>
+        </address>
       </div>
     </footer>
   </body>
