--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -14,36 +14,38 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <header>
-      <div class="header-main">
+    <header class="header">
         <a href="index.html" class="header-logo"
           ><span class="header-web">Web</span> Studio</a
         >
-        <nav>
+        <nav class="header-nav">
           <a href="index.html" class="header-btn">Студия</a>
           <a href="portfolio.html" class="header-btn">Портфолио</a>
           <a href="#" class="header-btn">Контакты</a>
         </nav>
-      </div>
-      <div class="header-contacts">
-        <a href="mailto:info@devstudio.com" class="header-contact"
-          >info@devstudio.com</a
-        >
-        <a href="tel:+380961111111" class="header-contact">+380961111111</a>
-      </div>
-    </header>
+        <ul class="header-contacts">
+          <li class="header-contact-item">
+            <a href="mailto:info@devstudio.com" class="header-contact"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380961111111" class="header-contact">+380961111111</a>
+          </li>
+        </ul>
+      </header>
     <main>
-      <section class="main-filter-buttons">
-        <ul>
+      <section class="main-buttons-container">
+        <ul class="main-filter-buttons">
         <li><button type="button" class="main-button">Все</button></li>
         <li><button type="button" class="main-button">Веб-сайты</button></li>
         <li><button type="button" class="main-button">Приложения</button></li>
         <li><button type="button" class="main-button">Дизайн</button></li>
         <li><button type="button" class="main-button">Маркетинг</button></li>
-    </ul>
+        </ul>
       </section>
       <section class="main-items">
-        <ul>
+        <ul class="main-item-list">
         <li class="item">
           <img src="images/portfolio1.jpg" alt="laptop" />
             <h3>Технокряк</h3>
@@ -96,14 +98,14 @@
       </section>
     </main>
     <footer>
-      <div class="footer-container">
-        <a href="index.html" class="footer-logo"
-          ><span class="header-web">Web</span> Studio</a
-        >
-        <address>
-            <p class="footer-adress">г. Киев, пр-т Леси Украинки, 26</p>
+        <div class="footer-container">
+          <a href="index.html" class="footer-logo"
+            ><span class="header-web">Web</span> Studio</a
+          >
+          <address class="footer-address">
+            <p class="footer-street">г. Киев, пр-т Леси Украинки, 26</p>
             <ul>
-              <li>
+              <li class="footer-list-item">
                 <a href="mailto:info@devstudio.com" class="footer-contact"
                   >info@devstudio.com</a
                 >
@@ -115,7 +117,7 @@
               </li>
             </ul>
           </address>
-      </div>
-    </footer>
+        </div>
+      </footer>
   </body>
 </html>
