--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <button type="button" class="section-button">Заказать услугу</button>
     </section>
     <section class="section-two">
-      <h2></h2>
+      <h2 class="hide">Особенности</h2>
       <ul class="section-two-list">
         <li class="list-item">
           <h3>Внимание к деталям</h3>
