--- a/index.html
+++ b/index.html
@@ -9,16 +9,19 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="css/styles.css" />
   <title>goit-markup-hw-02</title>
 </head>
 
 <body>
   <header class="header">
-    <a href="index.html" class="header-logo"><span class="header-web">Web</span> Studio</a>
+    <a href="index.html" class="header-logo"><span class="header-web">Web</span>Studio</a>
     <nav>
       <ul class="header-nav">
-        <li class="header-btn"><a href="index.html">Студия</a></li>
+        <li class="header-btn nav-active"><a href="index.html">Студия</a></li>
         <li class="header-btn"><a href="portfolio.html">Портфолио</a></li>
         <li class="header-btn"><a href="#">Контакты</a></li>
       </ul>
@@ -116,11 +119,11 @@
   </main>
   <footer>
     <div class="footer-container">
-      <a href="index.html" class="footer-logo"><span class="header-web">Web</span> Studio</a>
-      <address class="footer-address">
+      <a href="index.html" class="footer-logo"><span class="header-web">Web</span>Studio</a>
+      <address>
         <ul>
           <li class="footer-list-item"><a href="http://maps.google.com" target="_blank" rel="noopener noreferrer"
-              class="footer-street">г. Киев,
+              class="footer-street footer-contact ">г. Киев,
               пр-т Леси Украинки, 26</a></li>
           <li class="footer-list-item">
             <a href="mailto:info@devstudio.com" class="footer-contact">info@devstudio.com</a>
