--- a/portfolio.html
+++ b/portfolio.html
@@ -9,17 +9,20 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="css/styles.css" />
   <title>Portfolio</title>
 </head>
 
 <body>
   <header class="header">
-    <a href="index.html" class="header-logo"><span class="header-web">Web</span> Studio</a>
+    <a href="index.html" class="header-logo"><span class="header-web">Web</span>Studio</a>
     <nav>
       <ul class="header-nav">
         <li class="header-btn"><a href="index.html">Студия</a></li>
-        <li class="header-btn"><a href="portfolio.html">Портфолио</a></li>
+        <li class="header-btn nav-active"><a href="portfolio.html">Портфолио</a></li>
         <li class="header-btn"><a href="#">Контакты</a></li>
       </ul>
     </nav>
@@ -33,7 +36,8 @@
     </ul>
   </header>
   <main>
-    <section class="main-buttons-container">
+    <section class="main-items">
+      <h1 class="hide">Портфолио</h1>
       <ul class="main-filter-buttons">
         <li><button type="button" class="main-button">Все</button></li>
         <li><button type="button" class="main-button">Веб-сайты</button></li>
@@ -41,55 +45,51 @@
         <li><button type="button" class="main-button">Дизайн</button></li>
         <li><button type="button" class="main-button">Маркетинг</button></li>
       </ul>
-    </section>
-    <section class="main-items">
       <ul class="main-item-list">
         <li class="item">
           <img src="images/portfolio1.jpg" alt="laptop" />
-          <h3>Технокряк</h3>
+          <h2 class="item-header">Технокряк</h2>
           <p>Веб-сайт</p>
         </li>
         <li class="item">
           <img src="images/portfolio2.jpg" alt="basketball" />
-          <figcaption class="item-description">
-            <h3>Постер New Orlean vs Golden Star</h3>
-            <p>Дизайн</p>
+          <h2 class="item-header">Постер New Orlean vs Golden Star</h2>
+          <p>Дизайн</p>
         </li>
         <li class="item">
           <img src="images/portfolio3.jpg" alt="seafood restaurant" />
-          <h3>Ресторан Seafood</h3>
+          <h2 class="item-header">Ресторан Seafood</h2>
           <p>Приложение</p>
         </li>
         <li class="item">
           <img src="images/portfolio4.jpg" alt="headphones" />
-          <h3>Проект Prime</h3>
+          <h2 class="item-header">Проект Prime</h2>
           <p>Маркетинг</p>
         </li>
         <li class="item">
           <img src="images/portfolio5.jpg" alt="boxes" />
-          <h3>Проект Boxes</h3>
+          <h2 class="item-header">Проект Boxes</h2>
           <p>Приложение</p>
         </li>
         <li class="item">
           <img src="images/portfolio6.jpg" alt="imac" />
           <figcaption>
-            <h3>Inspiration has no Borders</h3>
+            <h2 class="item-header">Inspiration has no Borders</h2>
             <p>Веб-сайт</p>
         </li>
         <li class="item">
           <img src="images/portfolio7.jpg" alt="Book" />
-          <h3>Издание Limited Edition</h3>
+          <h2 class="item-header">Издание Limited Edition</h2>
           <p>Дизайн</p>
         </li>
         <li class="item">
           <img src="images/portfolio8.jpg" alt="LAB PROJECT" />
-          <h3>Проект LAB</h3>
+          <h2 class="item-header">Проект LAB</h2>
           <p>Маркетинг</p>
         </li>
         <li class="item">
           <img src="images/portfolio9.jpg" alt="another laptop" />
-
-          <h3>Growing Business</h3>
+          <h2 class="item-header">Growing Business</h2>
           <p>Приложение</p>
         </li>
       </ul>
@@ -97,11 +97,11 @@
   </main>
   <footer>
     <div class="footer-container">
-      <a href="index.html" class="footer-logo"><span class="header-web">Web</span> Studio</a>
-      <address class="footer-address">
+      <a href="index.html" class="footer-logo"><span class="header-web">Web</span>Studio</a>
+      <address>
         <ul>
           <li class="footer-list-item"><a href="http://maps.google.com" target="_blank" rel="noopener noreferrer"
-              class="footer-street">г. Киев,
+              class="footer-street footer-contact ">г. Киев,
               пр-т Леси Украинки, 26</a></li>
           <li class="footer-list-item">
             <a href="mailto:info@devstudio.com" class="footer-contact">info@devstudio.com</a>
